--- a/src/Pages/CartPage/CartPage.css
+++ b/src/Pages/CartPage/CartPage.css
@@ -37,3 +37,40 @@ button:disabled {
   background-color: #ccc;
   cursor: not-allowed;
 }
+
+.cart-drawer {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 300px;
+  height: 100%;
+  background-color: white;
+  border-left: 1px solid #ddd;
+  padding: 20px;
+  overflow-y: auto;
+  box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+.close-btn {
+  background: none;
+  position: absolute;
+  right: 17px;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  color: #333;
+}
+
+.cart-item {
+  margin-bottom: 15px;
+}
+
+.cart-item h3 {
+  margin: 0;
+  font-size: 16px;
+}
+
+.cart-item p,
+.cart-item span {
+  font-size: 14px;
+}
